src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_bad_string_escape.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(r#\"\"\\q\"\"#)"
---
LexicalError {
    error: BadStringEscape,
    location: SrcSpan {
        start: 1,
        end: 2,
    },
}
