src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_invalid_unicode_escape.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(r#\"\"\\u{}\"\"#)"
---
LexicalError {
    error: InvalidUnicodeEscape(
        InvalidNumberOfHexDigits,
    ),
    location: SrcSpan {
        start: 4,
        end: 4,
    },
}
