src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_missing_float_exponent.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(\"1e\")"
---
LexicalError {
    error: MissingExponent,
    location: SrcSpan {
        start: 2,
        end: 2,
    },
}
