src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_radix_integer_digit_out_of_range.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(\"0b102\")"
---
LexicalError {
    error: DigitOutOfRadix,
    location: SrcSpan {
        start: 4,
        end: 4,
    },
}
