src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_radix_integer_without_value.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(\"0x\")"
---
LexicalError {
    error: RadixIntNoValue,
    location: SrcSpan {
        start: 1,
        end: 1,
    },
}
