src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_trailing_numeric_underscore.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(\"1_\")"
---
LexicalError {
    error: NumTrailingUnderscore,
    location: SrcSpan {
        start: 1,
        end: 1,
    },
}
