src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_unrecognized_token.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(\"~\")"
---
LexicalError {
    error: UnrecognizedToken {
        tok: '~',
    },
    location: SrcSpan {
        start: 0,
        end: 1,
    },
}
