src/parse/lexer/snapshots/geam__parse__lexer__tests__reject_unterminated_string.snap
---
source: src/parse/lexer/tests.rs
expression: "lex_reject(r#\"\"unterminated\"#)"
---
LexicalError {
    error: UnexpectedStringEnd,
    location: SrcSpan {
        start: 0,
        end: 13,
    },
}
