src/parse/lexer/snapshots/geam__parse__lexer__tests__tokenizes_newlines_and_preserves_comment_boundaries.snap
---
source: src/parse/lexer/tests.rs
expression: "lex(\"one\\n// comment\\r\\ntwo\")"
---
Name { name: "one" } @ 0..3
NewLine @ 3..4
NewLine @ 14..16
Name { name: "two" } @ 16..19
EndOfFile @ 19..19
